# jacarei-em-dados

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
dados/: Jacarei_Agregados_demografia.csv  Jacarei_setores_malha.gpkg
dicionario_ibge/: dicionario_setores_cencitarios_demografia.csv  dicionario_setores_cencitarios_malha.csv
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/public/: jacarei_setores_merged.geojson  vivareal_mercado.json  vivareal_por_setor.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgePyramid.tsx  CategoryTabs.tsx  Dashboard.tsx  DrawControl.tsx  ErrorBoundary.tsx  FilterBar.tsx  Header.tsx  Map.tsx  NoDataMessage.tsx  SexDistribution.tsx  SummaryCards.tsx
frontend/src/components/__tests__/: CategoryTabs.test.tsx  MercadoImobiliarioView.test.tsx  PieChart.test.tsx
frontend/src/components/categories/: AlfabetizacaoView.tsx  CorRacaView.tsx  DemografiaView.tsx  DomicilioView.tsx  IndigenasQuilombolasView.tsx  MercadoImobiliarioView.tsx  ParentescoView.tsx  RendaView.tsx  index.ts
frontend/src/components/charts/: MarketPyramid.tsx  PieChart.tsx  StackedBar.tsx  StatCard.tsx  index.ts
frontend/src/hooks/: useDashboard.ts  useFilters.ts  useGeoData.ts  useSelection.ts  useTheme.ts  useVivarealData.ts
frontend/src/test/: setup.ts
frontend/src/utils/: aggregation.ts  constants.ts  formatting.ts  polygonSelection.ts
scripts/: preprocess.py  preprocess_vivareal.py  test_preprocess.py  test_preprocess_vivareal.py
(+13 files in other folders)
